--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "cerberus-website",
+  "name": "enchantedcanvas-website",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@tsparticles/engine": "^3.2.1",
+    "@tsparticles/react": "^3.0.0",
     "jarallax": "^2.1.4",
     "next": "13.5.6",
     "react": "^18",
