--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react": "^18",
     "react-dom": "^18",
     "react-tsparticles": "^2.12.2",
+    "run": "^1.5.0",
     "tsparticles-slim": "^2.12.0"
   },
   "devDependencies": {
